reorganizing the basics files

--- a/README.ipynb
+++ b/README.ipynb
@@ -40,7 +40,7 @@
    "id": "97d8d1ee-944a-45ff-b57c-8d5f50e09d91",
    "metadata": {},
    "source": [
-    "# [1. Basic types](./notebooks/100_BasicTypes.ipynb)"
+    "# [1. Basics](./notebooks/100_Basics.ipynb)"
    ]
   },
   {
