All of the basics except dict and set

--- a/notebooks/100_Basics.ipynb
+++ b/notebooks/100_Basics.ipynb
@@ -459,7 +459,7 @@
    "id": "1d2c41b4-99eb-4503-a89d-60a08be5b28f",
    "metadata": {},
    "source": [
-    "### Tuple\n",
+    "## Tuple\n",
     "**Immutable**"
    ]
   },
@@ -663,7 +663,7 @@
    "id": "e7f199bd-7163-49e1-a427-a1f2037fc19a",
    "metadata": {},
    "source": [
-    "### Range"
+    "## Range"
    ]
   },
   {
@@ -695,7 +695,7 @@
    "id": "3ac6c880-3c49-49e3-963f-de44177d5a4c",
    "metadata": {},
    "source": [
-    "### List\n",
+    "## List\n",
     "**Mutable**"
    ]
   },
@@ -776,10 +776,188 @@
   },
   {
    "cell_type": "markdown",
+   "id": "efcd300c-cb13-49b7-b1ed-2034736ac597",
+   "metadata": {},
+   "source": [
+    "## Strings revisited\n",
+    "Strings are also lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1138,
+   "id": "8feb87ca-8f20-41a0-b5e8-f454b88cf89f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_string = 'Whatever'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1140,
+   "id": "5e1462be-052b-4ae6-bbc7-1f64e487c9a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 W\n",
+      "1 h\n",
+      "2 a\n",
+      "3 t\n",
+      "4 e\n",
+      "5 v\n",
+      "6 e\n",
+      "7 r\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i,letter in enumerate(my_string):\n",
+    "    print(i, letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1141,
+   "id": "1e6c4b51-31dd-4716-ad62-29327cb871e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ever'"
+      ]
+     },
+     "execution_count": 1141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Slicing:\n",
+    "my_string[-4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1142,
+   "id": "3b9c1886-ee75-4284-9a42-b801adea3540",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_string.index('v')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1152,
+   "id": "23ab83a4-b3b9-405d-a280-8dd0007fbcd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's have a complete phrase,\n",
+      "with newlines and all.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_string = \"Let's have a complete phrase,\\nwith newlines and all.\"\n",
+    "print(my_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1153,
+   "id": "9e31db3e-4cc6-4c0f-b45a-bbd50038eafb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Let's\",\n",
+       " 'have',\n",
+       " 'a',\n",
+       " 'complete',\n",
+       " 'phrase,',\n",
+       " 'with',\n",
+       " 'newlines',\n",
+       " 'and',\n",
+       " 'all.']"
+      ]
+     },
+     "execution_count": 1153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_string.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1154,
+   "id": "4036ba7e-ad67-4811-b8b5-36449782d342",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Let's have a complete phrase,\", 'with newlines and all.']"
+      ]
+     },
+     "execution_count": 1154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_string.split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1155,
+   "id": "ebb12030-63da-4781-a585-58be892efe0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let us have a complete phrase,\n",
+      "with newlines and all.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_string = my_string.replace(\"'s\", \" us\")\n",
+    "print(my_string)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e95e13ad-a881-4b19-b8a1-74b590443df9",
    "metadata": {},
    "source": [
-    "### Bonus: Generators"
+    "## Bonus: Generators"
    ]
   },
   {
@@ -888,7 +1066,7 @@
    "metadata": {},
    "source": [
     "------------\n",
-    "## Exercises"
+    "# Exercises"
    ]
   },
   {
@@ -896,7 +1074,7 @@
    "id": "2b02c604-f27e-4057-8e78-41d581fe88ae",
    "metadata": {},
    "source": [
-    "**EX.1. Bool:**\n",
+    "### EX.1. Bool:\n",
     "Find the number of students with notes bigger then 16."
    ]
   },
@@ -992,7 +1170,7 @@
    "id": "a4bb8a04-e128-4842-88e1-dcd4e9c7f285",
    "metadata": {},
    "source": [
-    "**EX.2. List comprehension**  \n",
+    "### EX.2. List comprehension  \n",
     "Increase by 1 the grade of each student if it's smaller then 20, otherwise leave it at 20"
    ]
   },
@@ -1082,6 +1260,72 @@
    "outputs": [],
    "source": [
     "grades_arr[grades_arr < 20] += 1 # That's all :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69ef6ed2-667a-4983-9a7c-d40d8646c88f",
+   "metadata": {},
+   "source": [
+    "### EX. 3. String manipulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1179,
+   "id": "e33516c6-f6f6-43cc-bf99-d974187d7472",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Let Us Have A Complete Phrase, With Newlines And All.'"
+      ]
+     },
+     "execution_count": 1179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join([word.capitalize() for word in my_string.split()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64307751-3f5e-4d8f-9451-6906f5ed4086",
+   "metadata": {},
+   "source": [
+    "Try to do the same as above, but capitalize only the last letter of each word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1169,
+   "id": "590a7019-3f2a-4af5-9fde-eb73d71e1456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1178,
+   "id": "928c2919-2837-4cef-82d7-433918196337",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "leT uS havE A completE phrase, witH newlineS anD all. \n",
+      " leT uS havE A completE phrasE, witH newlineS anD alL.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load \"../snippets/solutions/BackwardCapitalization.py\""
    ]
   }
  ],
