--- a/README.ipynb
+++ b/README.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "source": [
     "# svi_python_initiation\n",
-    "Support for the _scientific python initiation @svi_ course\n",
+    "<a name=\"logo\"></a>\n",
+    "[<img width=\"100px\" src=\"./img/Logo_135_SGCNRSbis.png\"></img>](#logo)\n",
+    "\n",
+    "Support for the _scientific python initiation @svi course_\n",
+    "\n",
     "\n",
     "\n",
     "## Things to do before we begin:\n",
@@ -26,7 +30,7 @@
     "### 3. Take a look at the basic topics we planned to cover\n",
     "<a name=\"plan\"></a>\n",
     "\n",
-    "[<img width=\"100%\" src=\"./img/cours_plan.svg\"></img>](#plan)\n",
+    "[<img width=\"100%\" src=\"./img/course_plan.svg\"></img>](#plan)\n",
     "\n",
     "All suggestions for additionnal topics are welcomed!  \n",
     "To submit your proposals, you can either use the Teams channel, either open an issue here (a-ha!). (the most voted ones are sure to enter the program)\n",
