Lowered the dict importance, added the links to chapters in readme

--- a/notebooks/100_Basics.ipynb
+++ b/notebooks/100_Basics.ipynb
@@ -15,7 +15,7 @@
    "id": "24c38bec-e56f-408a-b411-9595f697754c",
    "metadata": {},
    "source": [
-    "# 1. Loops\n",
+    "# 1. <a id=\"Loops\"></a>Loops\n",
     "```Python\n",
     "# The FOR loop:\n",
     "for x in my_iterable_object:\n",
@@ -38,7 +38,7 @@
    "id": "66b0297e-b740-4a80-9739-f1598c1d0724",
    "metadata": {},
    "source": [
-    "# 2. Basic types\n",
+    "# 2. <a id=\"BasicTypes\"></a>Basic types\n",
     "\n",
     "## 2.1. Booleans\n",
     "\n",
@@ -526,7 +526,7 @@
    "id": "16f949d6-ff5d-437e-85b8-32098fdcbf6c",
    "metadata": {},
    "source": [
-    "# 3. Sequences\n",
+    "# 3. <a id=\"Sequences\"></a>Sequences\n",
     "```Python\n",
     "range\n",
     "tuple\n",
@@ -1293,8 +1293,8 @@
    "id": "71b92df8-06f5-486b-b648-5dc214c612f2",
    "metadata": {},
    "source": [
-    "# 4. Dictionary\n",
-    "A verastile container."
+    "# 3.5. Dictionaries & Sets\n",
+    "Dictionary - A verastile container."
    ]
   },
   {
@@ -1315,7 +1315,7 @@
    "id": "03b9f626-9ef0-4cac-b102-65a84605d321",
    "metadata": {},
    "source": [
-    "# 5. Functions \n",
+    "# 4. <a id=\"Functions\"></a>Functions \n",
     "Everything is an object"
    ]
   },
