--- a/README.ipynb
+++ b/README.ipynb
@@ -44,7 +44,11 @@
    "id": "97d8d1ee-944a-45ff-b57c-8d5f50e09d91",
    "metadata": {},
    "source": [
-    "# [1. Basics](./notebooks/100_Basics.ipynb)"
+    "# [1. Basics](./notebooks/100_Basics.ipynb)\n",
+    "## [1.1. Loops](./notebooks/100_Basics.ipynb#Loops)\n",
+    "## [1.2. Basic types](./notebooks/100_Basics.ipynb#BasicTypes)\n",
+    "## [1.3. Sequences](./notebooks/100_Basics.ipynb#Sequences)\n",
+    "## [1.4. Functions](./notebooks/100_Basics.ipynb#Functions)"
    ]
   },
   {
