added some info about dicts and sets

--- a/README.ipynb
+++ b/README.ipynb
@@ -48,7 +48,8 @@
     "## [1.1. Loops](./notebooks/100_Basics.ipynb#Loops)\n",
     "## [1.2. Basic types](./notebooks/100_Basics.ipynb#BasicTypes)\n",
     "## [1.3. Sequences](./notebooks/100_Basics.ipynb#Sequences)\n",
-    "## [1.4. Functions](./notebooks/100_Basics.ipynb#Functions)"
+    "## [1.4. Functions](./notebooks/100_Basics.ipynb#Functions)\n",
+    "## [1.5. Exercises](./notebooks/100_Basics.ipynb#exercises)"
    ]
   },
   {
