--- a/notebooks/100_Basics.ipynb
+++ b/notebooks/100_Basics.ipynb
@@ -1293,22 +1293,142 @@
    "id": "71b92df8-06f5-486b-b648-5dc214c612f2",
    "metadata": {},
    "source": [
-    "# 3.5. Dictionaries & Sets\n",
-    "Dictionary - A verastile container."
+    "## 3.5. Dictionaries & Sets\n",
+    "### Dictionary\n",
+    "A verastile container whose items are of the form key -> value. For each key there is a value; keys must be immutable, values can be of any type.  \n",
+    "_Each key is separated from its value by a colon `:`, the items are separated by commas `,`, and the whole thing is enclosed in curly braces `{}`. An empty dictionary without any items is written with just two curly braces, like this: `{}`._\n",
+    "\n",
+    "For more info, see for example : https://www.tutorialspoint.com/python/python_dictionary.htm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e0117211-d1d3-441f-b4cd-360542fc1981",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# The keys are unique\n",
+    "my_dict = {\"strawberry\": \"red\", \"apple\": \"green\", \"apple\": \"red\",\n",
+    "          \"banana\": \"yellow\", 1: [\"number\", \"integer\", True],\n",
+    "           (\"Latitude\", \"Longitude\"): (42.439516, 18.624840)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ed888b9d-e927-4285-9fb9-427014a1da96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'red'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dict[\"apple\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "42d945bb-1fae-4f87-9e54-4fcc5cd11898",
    "metadata": {
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'location'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-ba33fea22c55>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmy_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"location\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'location'"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict[\"location\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ad72fec8-1062-4e7e-acae-0a7db5cb564f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(48.913021, 2.369157)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dict.get(\"location\", (48.913021, 2.369157))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "74314b31-2630-47e5-9f85-75f47d74576e",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_dict[45] = 34.33"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e897287f-87fb-4de7-a525-dbd8ab2837f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "strawberry------------------------------> red\n",
+      "apple-----------------------------------> red\n",
+      "banana----------------------------------> yellow\n",
+      "1---------------------------------------> ['number', 'integer', True]\n",
+      "('Latitude', 'Longitude')---------------> (42.439516, 18.62484)\n",
+      "45--------------------------------------> 34.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in my_dict.items():\n",
+    "    print(f\"{str(k):-<40s}> {v}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9628cf5d-83e1-4b65-937a-d36f42eec2b5",
+   "metadata": {},
+   "source": [
+    "### Set\n",
+    "Keeps only unique elements, order is unpredictable?  \n",
+    "Further reading: https://realpython.com/python-sets/"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1420,7 +1540,7 @@
    "metadata": {},
    "source": [
     "------------\n",
-    "# Exercises"
+    "# 5. <a id=\"Exercises\"></a>Exercises"
    ]
   },
   {
