corrected a typo in a link's address

--- a/README.ipynb
+++ b/README.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "**Outline :**  \n",
     "\n",
-    "0. [The Tools](.notebooks/000_Tools.ipynb) (10')\n",
+    "0. [The Tools](./notebooks/000_Tools.ipynb) (10')\n",
     "1. [The Basics](./notebooks/100_Basics.ipynb) (1h30')\n",
     "    * [Loops](./notebooks/100_Basics.ipynb#Loops)\n",
     "    * [Basic types](./notebooks/100_Basics.ipynb#BasicTypes)\n",
